Basic index page information

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,6 @@
-# Welcome to Nextra
+# skibidiscript
  
-Hello, world!
+skibidiscript is a programming language similar to Lua, made as a sideproject by Robiot during his streams on Twitch.
+The project is hosted on GitHub for everyone to freely use and modify.
+
+Visit the "Getting Started" page to start working with skibidiscript.
